src/ToDo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment
  labels:
    app: todo
spec:
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: wi-vsoftlabteam1
      containers:
        - name: todo
          image: vsoftlabteam1.azurecr.io/todo/api:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
