src/ToDo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo
  type: ClusterIP
  ports:
    - name: name-of-service-port-todo
      protocol: TCP
      port: 80
      targetPort: 8080
