src/ToDo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: vsoftlabteam1.team1.patoarchitekci.io
    http:
      paths:
      - backend:
          service:
            name: todo-service
            port: 
              number: 80
        path: /
        pathType: Prefix
